fix duties layout issue seen in real game

--- a/Wicked Ones/wicked-ones.css
+++ b/Wicked Ones/wicked-ones.css
@@ -499,7 +499,8 @@ div.placeholder {
   display: grid;
   grid-template-columns: 2em 4em 1fr;
   column-gap: 3px;
-  align-items: baseline;
+  /* broke something on real game, investigate later?*/
+  /* align-items: baseline; */
 }
 
 fieldset.repeating_duties + .repcontainer > .repitem {
